--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,20 @@ spring:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
+logging:
+  level:
+    com:
+      sky:
+        mapper: debug
+        service: info
+        controller: info
+jwt:
+  # 设置jwt签名加密时使用的秘钥
+  admin-secret-key: confessionwallback
+  # 设置jwt过期时间
+  admin-ttl: 7200000
+  # 设置前端传递过来的令牌名称
+  admin-token-name: token
+  user-secret-key:
+  user-ttl: 7200000
+  user-token-name: authentication
