--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     time-zone: GMT+8
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/confession_wall?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://ai.tordor.top:50358/confession_wall?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: confession_wall
     password: confession_wall
 
