yml中logging包名修改 pom引入hutool依赖 添加了异常类，和对应的DTO 实现用户：查看圈子（分页）   用户：加入圈子   用户：更改圈子信息（需要管理员权限）   用户：增加圈子管理（需要圈子超级管理权限）   用户：更改用户在某个圈子里的角色   CircleController   CircleService   CircleServiceImpl   CircleMapper   CircleMapper.xml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,11 @@ mybatis-plus:
 logging:
   level:
     com:
-      sky:
-        mapper: debug
-        service: info
-        controller: info
+      sanding:
+        confessionwallback:
+          mapper: debug
+          service: info
+          controller: info
 jwt:
   # 设置jwt签名加密时使用的秘钥
   admin-secret-key: confessionwallback
