--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ jwt:
   admin-ttl: 7200000
   # 设置前端传递过来的令牌名称
   admin-token-name: token
-  user-secret-key:
+  user-secret-key: confessionwallback
   user-ttl: 7200000
   user-token-name: authentication
 wechat:
