--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
+  global-config:
+    db-config:
+      logic-delete-field: post_is_delete #逻辑删除的实体类字段
+      logic-delete-value: 1 #逻辑删除
+      logic-not-delete-value: 0 #逻辑未删除
 logging:
   level:
     com:
